// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionItemButton <ActionItemButton /> renders correctly 1`] = `
<Icon
  className=""
  icon={
    <Icon
      iconClass="icon-placeholder"
      iconElement={undefined}
    />
  }
  isActive={false}
  key="command"
  onClick={[Function]}
  title="tests.label"
/>
`;

exports[`ToolButton <ToolButton /> renders correctly 1`] = `
<Icon
  className=""
  icon={
    <Icon
      iconClass="icon-placeholder"
      iconElement={undefined}
    />
  }
  isActive={false}
  key="tool1"
  onClick={[Function]}
/>
`;
